package com.example.myarena.domain;

public enum OrderStatus {
    PENDING,    
    PAID,       
    CANCELLED,  
    SHIPPED    
}

